fixed links, trying new image format

--- a/_posts/2026-02-03-Lab-3.md
+++ b/_posts/2026-02-03-Lab-3.md
@@ -2,10 +2,13 @@
 layout: post
 author: West Boudreaux
 ---
-lab 3 has had us navigate the Jekyll format system. In theory it makes a lot of sense as a collection of files that, together, construct the website and allow for a more modular feel. That said, in practice, navigating the structure to correctly reference pieces proved to be difficult for me at times. Most specifically while I was trying to edit the sytlesheet. First, I was curious and confused as to why it was a .scss file and not the previosly-used .css file type. That aside, I went on trying to make edits; my initial changes were to broad tags, namely h1 and li. When I tried to then make stylistic changes to more specific aspects of the website, I found that I could not correctly identify each piece specifically. I wanted to make the items in my header a certain color, perhaps add a background color to it, and, seperatley, add a background color to the page contents. I would say I made some progress at least finding my way around and conceptualizing how everything is connected; however, I am eager to learn how to find the correct tags to add style to so that I may further customize my page. I want to take inspiration from super cool and interesting websites like <a hreff="https://curious.co/">this one.</a> Though, I do not plan to have nearly as many moving parts or complexities; I just enjoy the fact that it is wacky and weird and super interactive. 
+
+
+lab 3 has had us navigate the Jekyll format system. In theory it makes a lot of sense as a collection of files that, together, construct the website and allow for a more modular feel. That said, in practice, navigating the structure to correctly reference pieces proved to be difficult for me at times. Most specifically while I was trying to edit the sytlesheet. First, I was curious and confused as to why it was a .scss file and not the previosly-used .css file type. That aside, I went on trying to make edits; my initial changes were to broad tags, namely h1 and li. When I tried to then make stylistic changes to more specific aspects of the website, I found that I could not correctly identify each piece specifically. I wanted to make the items in my header a certain color, perhaps add a background color to it, and, seperatley, add a background color to the page contents. I would say I made some progress at least finding my way around and conceptualizing how everything is connected; however, I am eager to learn how to find the correct tags to add style to so that I may further customize my page. I want to take inspiration from super cool and interesting websites like <a href="https://curious.co/">this one.</a> Though, I do not plan to have nearly as many moving parts or complexities; I just enjoy the fact that it is wacky and weird and super interactive. 
 <div>
 <row class="sm-col-6">
-Thinking about the format, these <a hreff="https://nestingdolls.co/blogs/posts/history-nesting-dolls">dudes</a> come to mind. 
+Thinking about the format, these <a href="https://nestingdolls.co/blogs/posts/history-nesting-dolls">dudes</a> come to mind. 
+![Look!]({{'/assets/Images/RussionDoll.jpg' | relative_url}})
 <img src="/Images/RussinDoll.jpg"/>
 </row>
 </div>
