--- a/_posts/2026-02-03-Lab-3.md
+++ b/_posts/2026-02-03-Lab-3.md
@@ -9,7 +9,7 @@ lab 3 has had us navigate the Jekyll format system. In theory it makes a lot of 
 <row class="sm-col-6">
 Thinking about the format, these <a href="https://nestingdolls.co/blogs/posts/history-nesting-dolls">dudes</a> come to mind. 
 ![Look!]({{'/assets/Images/RussionDoll.jpg' | relative_url}})
-<img src="/Images/RussinDoll.jpg"/>
+<img src="/assets//Images/RussinDoll.jpg"/>
 </row>
 </div>
 
@@ -17,7 +17,7 @@ Thinking about the format, these <a href="https://nestingdolls.co/blogs/posts/hi
 <row class="sm-col-6">
 This is the most effort I have really put in to any classes regular assignments. I made it my goal to really push myself to work hard for my last semester. In doing so, I am also romantisizing my work to look a little something like this guy.
     <div>
-    <img src="/Images/HackerGuy.jpg"/>
+    <img src="/assets/Images/HackerGuy.jpg"/>
     </div>
 </row>
 </div>
