--- a/_posts/2026-02-23-Lab-6-Post.md
+++ b/_posts/2026-02-23-Lab-6-Post.md
@@ -4,4 +4,8 @@ author: West Boudreaux
 ---
 
 Lab 6 had us create an entity relationship diagram and an SQL schema for a local grocery store. The client wanted customers
-to be able to sign up with their name, address, and phone number. 
+to be able to sign up with their name, address, and phone number. Once registered, customers should be able to start an order; in each order customers specify which items they want and how many of each, provide any necessary special instructions, whether or not they want substitution of items. After an order is finalized, the customer will provide whether they would like to pick their order up, or have it delivered to their accounts address; further, they will also list the date and time for the pickup or delivery. Lastly, the client wished for finalized orders to no longer be changed by the customers. 
+
+Some assumptions that I made while modeling this scenario include: 
+<ul>
+</ul>
