assumptions and start of user stories

--- a/_posts/2026-02-23-Lab-6-Post.md
+++ b/_posts/2026-02-23-Lab-6-Post.md
@@ -8,4 +8,16 @@ to be able to sign up with their name, address, and phone number. Once registere
 
 Some assumptions that I made while modeling this scenario include: 
 <ul>
+    <li>Deliveries would be made to the address linked to a customer's account</li>
+    <li>Quantity of items can never be null - 0 as a quantity seemed more fitting for being out of stock</li>
+    <li>Customers could make multiple orders</li>
+    <li>Orders would include multiple items</li>
+    <li>Customers could not fill out delivery information until after selecting 'y' to a finalize question</li>
+    <li>Payment would be processed upon pickup or delivery via institutions already in place</li>
 </ul>
+
+Five User Stories I used to help myself model
+<ol>
+    <li>Customers can sign up with name, phone number, and address. Size: 8, Connection: ability to place order</li>
+    <li></li>
+</ol>
