added user stories

--- a/_posts/2026-02-23-Lab-6-Post.md
+++ b/_posts/2026-02-23-Lab-6-Post.md
@@ -14,10 +14,14 @@ Some assumptions that I made while modeling this scenario include:
     <li>Orders would include multiple items</li>
     <li>Customers could not fill out delivery information until after selecting 'y' to a finalize question</li>
     <li>Payment would be processed upon pickup or delivery via institutions already in place</li>
+    <li>Item descriptions served in place of item images to help customers know what an item is more specifically</li>
 </ul>
 
 Five User Stories I used to help myself model
 <ol>
-    <li>Customers can sign up with name, phone number, and address. Size: 8, Connection: ability to place order</li>
-    <li></li>
+    <li>Customers can sign up with name, phone number, and address. Size: 10, Connection: ability to place order</li>
+    <li>Customers can add special instructions to an order. Size: 2, Connection: customer satisfaction</li>
+    <li>Store can add descriptions to items that they distribute. Size: 3, Connection: help fascilitate online shopping</li>
+    <li>Customers can choose between pickup or delivery at a specific datetime. Size: 8, Connection: ability to recieve order</li>
+    <li>Customers can decide if they want an item to be substituted were it out of stock. Size: 4, Connection: customer satisfaction</li>
 </ol>
