--- a/_posts/2026-02-23-Lab-6-Post.md
+++ b/_posts/2026-02-23-Lab-6-Post.md
@@ -25,3 +25,6 @@ Five User Stories I used to help myself model
     <li>Customers can choose between pickup or delivery at a specific datetime. Size: 8, Connection: ability to recieve order</li>
     <li>Customers can decide if they want an item to be substituted were it out of stock. Size: 4, Connection: customer satisfaction</li>
 </ol>
+
+<h2>My Entity Relationship Diagram</h2>
+<img src="C:\Users\westb\OneDrive - Hendrix College\Desktop\Databases&Web Systems\blog\assets\Images\RussinDoll.jpg">
