second try with image

--- a/_posts/2026-02-23-Lab-6-Post.md
+++ b/_posts/2026-02-23-Lab-6-Post.md
@@ -27,4 +27,4 @@ Five User Stories I used to help myself model
 </ol>
 
 <h2>My Entity Relationship Diagram</h2>
-<img src="C:\Users\westb\OneDrive - Hendrix College\Desktop\Databases&Web Systems\blog\assets\Images\RussinDoll.jpg">
+<img src="/assets/Images/Project6_diagram.png">
