--- a/_posts/2026-02-23-Lab-6-Post.md
+++ b/_posts/2026-02-23-Lab-6-Post.md
@@ -27,4 +27,4 @@ Five User Stories I used to help myself model
 </ol>
 
 <h2>My Entity Relationship Diagram</h2>
-<img src="/assets/Images/Project6_diagram.png">
+<img src="https://lucid.app/publicSegments/view/233ddbbe-98bc-4977-8e52-9c9c89d7b3ce/image.pdf">
