--- a/_posts/2026-02-23-Lab-6-Post.md
+++ b/_posts/2026-02-23-Lab-6-Post.md
@@ -27,4 +27,5 @@ Five User Stories I used to help myself model
 </ol>
 
 <h2>My Entity Relationship Diagram</h2>
-<img src="{{ /assets/images/Project6_diagram.png | relative_url }}" alt="Description of image">
+![Entity Relationship Diagram]({{ "/assets/images/Project6_diagram.png" | relative_url }})
+
