final comments before first submission

--- a/_posts/2026-02-23-Lab-6-Post.md
+++ b/_posts/2026-02-23-Lab-6-Post.md
@@ -35,3 +35,5 @@ I think that my organization in this model looks pleasing to the eye and would s
 <h2>My Redgate Schema</h2>
 ![Redgate Schema]({{ "assets\images\Project6Schema.png" | relative_url}})
 
+I am not very satisfied with this data representation. I feels confusing and the whole Redgate platform was not super intuitive when there were errors. It created some columns at certain times and then would throw errors when it did not even after there where primary keys in a table it said that did not have one. I think I was just misunderstanding something about the whole thing of it. 
+
