--- a/_posts/2026-02-23-Lab-6-Post.md
+++ b/_posts/2026-02-23-Lab-6-Post.md
@@ -28,12 +28,12 @@ Five User Stories I used to help myself model
 </ol>
 
 <h2>My Entity Relationship Diagram</h2>
-![Entity Relationship Diagram]({{ "assets\images\Project6_diagram.png" | relative_url }})
+![Entity Relationship Diagram]({{ "assets/Images/Project6_diagram.png" | relative_url }})
 
 I think that my organization in this model looks pleasing to the eye and would serve well in a consultation with a client. However, I fear that the contents may be incorrect in some areas. I was having a difficult time figuring out the relationships I should use and what I should make an entity. I began to confuse myself thinking about normalizations and second guessing myself around every corner. I think that I could, and likely will, encounter problems related to customers finalizing an order and then not being able to make a new order. 
 
 <h2>My Redgate Schema</h2>
-![Redgate Schema]({{ "assets\images\Project6Schema.png" | relative_url}})
+![Redgate Schema]({{ "assets/Images/Project6Schema.png" | relative_url}})
 
 I am not very satisfied with this data representation. I feels confusing and the whole Redgate platform was not super intuitive when there were errors. It created some columns at certain times and then would throw errors when it did not even after there where primary keys in a table it said that did not have one. I think I was just misunderstanding something about the whole thing of it. 
 
